--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,10 @@
 
 
+/* fonts */
+$title-font: 'Lato', sans-serif;
+$body-font: sans-serif;
+$mono-font: mono;
+
 @keyframes navgradient {
     0%{background-position:10% 0%}
     50%{background-position:91% 100%}
