--- a/src/components/ArticlePreview.astro
+++ b/src/components/ArticlePreview.astro
@@ -1,5 +1,5 @@
 ---
-const { frontmatter, url } = Astro.props.project;
+const { frontmatter, url } = Astro.props.article;
 ---
 
 <div class="card">
@@ -17,7 +17,7 @@ const { frontmatter, url } = Astro.props.project;
 			))}
 		</div>
 		<a class="link" href={url}>
-			<span class="linkInner">View</span>
+			<span class="linkInner">Read</span>
 		</a>
 	</div>
 </div>
@@ -25,9 +25,11 @@ const { frontmatter, url } = Astro.props.project;
 <style>
 	.card {
 		position: relative;
-		color: var(--t-bg);
-		background: var(--t-fg);
-		border: 1px solid #f0f0f0;
+		color: var(--t-white);
+		background: var(--t-grey);
+		border: 1px solid var(--c-white);
+		border-radius: var(--border);
+		overflow: hidden;
 	}
 
 	.title {
@@ -100,6 +102,7 @@ const { frontmatter, url } = Astro.props.project;
 		padding: 0.375em 1em;
 		color: var(--t-fg);
 		border: 2px solid var(--t-fg);
+		border-radius: var(--border);
 		transition: transform 300ms cubic-bezier(0, 0.4, 0.6, 1), border-color 1s linear;
 		transform: translateY(25%);
 	}
@@ -116,21 +119,11 @@ const { frontmatter, url } = Astro.props.project;
 
 	.tag {
 		display: inline-block;
-		color: var(--c-yellow);
+		color: var(--t-bg);
+		background-color: var(--c-white);
+		padding:0.25vmin 1vmin;
+		border-radius: var(--border);
 		text-transform: uppercase;
 		margin-left: 0.5em;
-	}
-
-	.tag:nth-of-type(1n) {
-		color: var(--c-green);
-	}
-	.tag:nth-of-type(2n) {
-		color: var(--c-orange);
-	}
-	.tag:nth-of-type(3n) {
-		color: var(--c-blue);
-	}
-	.tag:nth-of-type(4n) {
-		color: var(--c-pink);
 	}
 </style>
