--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,6 +7,9 @@
 	--c-red: #ff0000;
 	--c-white: #ffff;
 
+	/* Other */
+	--border: 18px;
+
 	/* Fonts */
 	--f-u18: 11.390625em;
 	--f-u17: 9.950627481136905em;
@@ -78,9 +81,11 @@ h1 {
 .button {
 	display: inline-block;
 	border: 3px solid currentColor;
+	border-radius: var(--border);
 	padding: 0.5em 1em;
 	font-weight: 700;
 	text-transform: uppercase;
+	text-decoration: none;
 }
 
 .wrapper {
@@ -89,6 +94,11 @@ h1 {
 	margin-right: auto;
 	padding-left: 2rem;
 	padding-right: 2rem;
+}
+
+.spacer {
+	width: 100%;
+	height: 15vh;
 }
 
 
