--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ const currentYear = new Date().getFullYear();
 <footer>
 	&copy; {currentYear} Piotr Nowakowski <br>
 	<small>Design by <a href="https://adsnowa.com">Adam Nowakowski</a></small>
-	<small class="byline">🚀 Built by Astro</small>
+	<small class="byline">🚀 Built using Astro</small>
 </footer>
 <style>
 	footer {
