--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -1,13 +1,15 @@
 ---
 import '../styles/global.css';
 const {
-	title = 'Piotr Nowakowski Personal Site',
+	title = 'Personal Website | Piotr Nowakowski',
 	description = 'The personal site of Piotr Nowakowski',
+	keywords = ['piotreknow', 'programming', 'backend', 'developer']
 } = Astro.props;
 ---
 
 <meta charset="UTF-8" />
 <meta name="description" property="og:description" content={description} />
+<meta name="keywords" content={keywords.join(", ")}>
 <meta name="viewport" content="width=device-width" />
 <meta name="generator" content={Astro.generator} />
 <title>{title}</title>
