--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ const featuredArticles = articles.slice(0, numberOfArticles)
 		<main>
 			<div class="bg-wrapper"></div>
 			<BgImage src="/assets/images/background.png" alt="background"/>
-			<Icons/>
+			<!-- <Icons/> -->
 		</main>
 		<Footer />
 	</body>
