make site responsive

--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -3,7 +3,7 @@ import '../styles/global.css';
 const {
 	title = 'Personal Website | Piotr Nowakowski',
 	description = 'The personal site of Piotr Nowakowski',
-	keywords = ['piotreknow', 'programming', 'backend', 'developer']
+	keywords = ['piotreknow', 'Piotr', 'Nowakowski', 'programming', 'backend', 'developer']
 } = Astro.props;
 ---
 
