make site responsive

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -20,7 +20,7 @@ import Nav from '../components/Nav.svelte';
 		</style>
 	</head>
 	<body>
-		<Nav />
+		<Nav client:load/>
 		<div class="wrapper">
 			<img src="/assets/images/404.png" alt="404 page not found">
 		</div>
