--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ const featuredArticles = articles.slice(0, numberOfArticles)
 		</style>
 	</head>
 	<body>
-		<Nav />
+		<Nav client:load/>
 		<main>
 			<div class="bg-wrapper"></div>
 			<BgImage src="/assets/images/background.png" alt="background"/>
