--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -60,7 +60,7 @@ const images = await Astro.glob("../images/background/*.png")
 		</style>
 	</head>
 	<body>
-		<Nav />
+		<Nav client:load/>
 		<div class="bg-wrapper"></div>
 		<BgImage client:load images={images} alt="background"/>
 		<div class="wrapper">
