--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -33,7 +33,7 @@ const articles = (await Astro.glob('./blog/**/*.mdx'))
 		</style>
 	</head>
 	<body>
-		<Nav />
+		<Nav client:load/>
 		<div class="spacer"></div>
 		<div class="wrapper">
 			<div class="grid">
