--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -31,20 +31,25 @@ const images = await Astro.glob("../images/background/*.png")
 				align-items: top;
 				gap: 5vw;
 			}
+			main {
+				position: relative;
+			}
 			@media screen and (max-width: 1200px) {
 				.wrapper {
 					top: 90vh;
+					font-size: 1em;
 				}
 				.aboutme {
-					font-size: .5em;
+					font-size: 1em;
 				}
 			}
 			@media screen and (max-width: 768px) {
 				.wrapper {
-					top: 140vh;
+					top: 80vh;
+					font-size: 1em;
 				}
 				.aboutme {
-					font-size: .3em;
+					font-size: .8em;
 				}
 			}
 			.card-side {
@@ -54,44 +59,48 @@ const images = await Astro.glob("../images/background/*.png")
 				justify-content: center;
 				align-items: right;
 			}
-			.aboutme {
+			/* .aboutme {
 				font-size: 1.5em;
-			}
+			} */
 		</style>
 	</head>
 	<body>
 		<Nav client:load/>
-		<div class="bg-wrapper"></div>
-		<BgImage client:load images={images} alt="background"/>
-		<div class="wrapper">
-			<Card>
-				<div class="card-wrapper">
-					<article class="card-side">
-						<img src="/assets/images/Piotrek.png" alt="Piotrek">
-						<h2>It's me</h2>
-						<p class="aboutme">
-							I am {moment().diff("2005-07-02", "years")} years old. I have been interested in programming from the age of 12.
-							Then I started learning on my own via the Internet. My first programming language was C#.
-							I also created 2D and 3D games in Unity. With time, I started to broaden my knowledge and became interested
-							in programming in Python. Later, my interests expanded to include new programs and various issues related
-							to this subject available on the Internet, which led me to the "Cybertree" programming school, where for
-							several years I have been developing my passions in this field. In addition, I try to constantly expand my
-							programming knowledge by following news and curiosities on the Internet, solving Try hack me tasks or 
-							answering questions on Stack Overflow. I try to reconcile my studies with my professional work.
-						</p>
-					</article>
-					<article class="card-side">
-						<img src="/assets/images/tree.png" alt="tree">
-						<h2>eat, sleep, CODE</h2>
-						<p>Programming: Go, Python, JavaScript, TypeScript, C#, Rust and more</p>
-						<p>Development environments: Visual Studio, Visual Studio Code, Android Studio, Unity.</p>
-						<p>Own methods of translating programming concepts developed by tutoring friends. Math and science aren't a problem for me.</p>
-						<p>What distinguishes me: I am not interested in computer games or sports.</p>
-					</article>
-				</div>
-			</Card>
-			<AccountIcons/>
-		</div>
-		<Footer />
+		<main>
+
+			<div class="bg-wrapper"></div>
+			<BgImage client:load images={images} alt="background"/>
+			<div class="wrapper">
+				<Card>
+					<div class="card-wrapper">
+						<article class="card-side">
+							<img src="/assets/images/Piotrek.png" alt="Piotrek">
+							<h2>It's me</h2>
+							<p class="aboutme">
+								I am {moment().diff("2005-07-02", "years")} years old. I have been interested in programming from the age of 12.
+								Then I started learning on my own via the Internet. My first programming language was C#.
+								I also created 2D and 3D games in Unity. With time, I started to broaden my knowledge and became interested
+								in programming in Python. Later, my interests expanded to include new programs and various issues related
+								to this subject available on the Internet, which led me to the "Cybertree" programming school, where for
+								several years I have been developing my passions in this field. In addition, I try to constantly expand my
+								programming knowledge by following news and curiosities on the Internet, solving Try hack me tasks or 
+								answering questions on Stack Overflow. I try to reconcile my studies with my professional work.
+							</p>
+						</article>
+						<article class="card-side">
+							<img src="/assets/images/tree.png" alt="tree">
+							<h2>eat, sleep, CODE</h2>
+							<p>Programming: Go, Python, JavaScript, TypeScript, C#, Rust and more</p>
+							<p>Development environments: Visual Studio, Visual Studio Code, Android Studio, Unity.</p>
+							<p>Own methods of translating programming concepts developed by tutoring friends. Math and science aren't a problem for me.</p>
+							<p>What distinguishes me: I am not interested in computer games or sports.</p>
+						</article>
+					</div>
+				</Card>
+				<AccountIcons/>
+			</div>
+			<Footer />
+		</main>
 	</body>
 </html>
+		
