Animated text start

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,6 +29,9 @@ const featuredArticles = articles.slice(0, numberOfArticles)
 		<main>
 			<div class="bg-wrapper"></div>
 			<BgImage src="/assets/images/background.png" alt="background"/>
+			<div class="animatio-container">
+				<h1>Animacja</h1>
+			</div>
 			<!-- <Icons/> -->
 			<Footer />
 		</main>
