--- a/src/pages/wecan.astro
+++ b/src/pages/wecan.astro
@@ -95,7 +95,7 @@ const images = await Astro.glob("../images/background/*.png")
 							</p>
 							<p>
 								Don't hesitate to get in touch via the contact form below or drop me an email at
-								<a href="mailto:kontakt@piotreknow.ml">kontakt@piotreknow.ml</a>. I am always
+								<a href="mailto:kontakt@piotreknow.dev">kontakt@piotreknow.dev</a>. I am always
 								excited to meet new people, share ideas, and build something amazing together.
 							</p>
 							<h4>Let's code the future!</h4>
